assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 62.5%;
    /* 16 * 0.625 = 10px */
}

body {
    font-family: "Roboto", sans-serif;
}

header {
    padding: 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #be2c2d;
    color: #ffffff;
}

.logo {
    font-family: "Merriweather", sans-serif;
    font-weight: 400;
    letter-spacing: 1px;
}

.logo span {
    font-weight: 800;
}

.header__icon {
    width: 25%;
    max-width: 100px;
}

.header__btn img {
    width: 20px;
    object-fit: contain;
}

.header__btn {
    width: 100%;
    padding: 0.5rem;
    display: flex;
    justify-content: space-around;
    align-items: center;
    border: none;
    outline: none;
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    border-radius: 5px;
    background-color: #000000;
    color: #ffffff;
}

nav {
    position: sticky;
    top: 0;
    padding: 1rem;
    display: flex;
    justify-content: space-between;
    background-color: #f5f5f5;

}

.search__container {
    border: 1px solid #ddd;
    padding: 0 0.5rem;
    display: flex;
    border-radius: 20px;
    background-color: #ddd;
}

input[type="search"] {
    border: none;
    outline: none;
    padding: 0.5rem;
    font-family: "Roboto", sans-serif;
    border-radius: 12px;
    background-color: #ddd;
}

.search__container:focus-within {
    width: 90%;
    transition: 0.2s;
}

input[type="search"]:focus {
    width: 100%;
}

.search__container img {
    width: 25px;
}

nav img {
    width: 25px;
}

.item__container {
    padding: 1rem;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
}

.card {
    display: flex;
    flex-direction: column;
    background-color: #f2eeee;
}

.card img {
    width: 100%;
    object-fit: cover;
}

.content {
    width: 100%;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.name {
    font-size: 1.3rem;
    font-weight: 500;
    letter-spacing: 1px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 125px;
}

.rating {
    width: 100%;
}

.price {
    font-size: 1.2rem;
    font-weight: 800;
    color: #be2c2d;
}

.list {
    display: none;
}

